fix: tweak scrollbar styles

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -24,26 +24,32 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
-
-  @include breakpoint($tablet-max) {
+  &:horizontal {
     width: 8px;
   }
-}
 
-::-webkit-scrollbar-track {
-  background-color: transparent;
-  border-radius: $default-border-radius;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.15);
-}
+  &:vertical {
+    height: 8px;
+  }
 
-::-webkit-scrollbar-thumb {
-  background-color: $secondary-color;
-  background-clip: padding-box;
-  border: $default-border $white-color;
-  border-radius: $default-border-radius;
+  @include breakpoint($tablet-max) {
+    &:horizontal {
+      width: 8px;
+    }
 
-  &:hover {
-    background-color: $light-color;
+    &:vertical {
+      height: 8px;
+    }
+  }
+
+  &-thumb {
+    background-clip: padding-box;
+    border: $default-border $white-color;
+    border-radius: $default-border-radius;
+    background-color: rgba($primary-color, 0.25);
+
+    &:hover {
+      background-color: $light-color;
+    }
   }
 }
